feat: 调整yaml配置文件

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -9,54 +9,54 @@ cache: true
 
 # Custom interface configuration
 interface:
-  customWelcome: "Welcome to LibreChat! Enjoy your experience."
+  customWelcome: "Welcome"
   # Privacy policy settings
-  privacyPolicy:
-    externalUrl: 'https://librechat.ai/privacy-policy'
-    openNewTab: true
+#  privacyPolicy:
+#    externalUrl: 'https://librechat.ai/privacy-policy'
+#    openNewTab: false
 
   # Terms of service
-  termsOfService:
-    externalUrl: 'https://librechat.ai/tos'
-    openNewTab: true
-    modalAcceptance: true
-    modalTitle: "Terms of Service for LibreChat"
-    modalContent: |
-      # Terms and Conditions for LibreChat
-
-      *Effective Date: February 18, 2024*
-
-      Welcome to LibreChat, the informational website for the open-source AI chat platform, available at https://librechat.ai. These Terms of Service ("Terms") govern your use of our website and the services we offer. By accessing or using the Website, you agree to be bound by these Terms and our Privacy Policy, accessible at https://librechat.ai//privacy.
-
-      ## 1. Ownership
-
-      Upon purchasing a package from LibreChat, you are granted the right to download and use the code for accessing an admin panel for LibreChat. While you own the downloaded code, you are expressly prohibited from reselling, redistributing, or otherwise transferring the code to third parties without explicit permission from LibreChat.
-
-      ## 2. User Data
-
-      We collect personal data, such as your name, email address, and payment information, as described in our Privacy Policy. This information is collected to provide and improve our services, process transactions, and communicate with you.
-
-      ## 3. Non-Personal Data Collection
-
-      The Website uses cookies to enhance user experience, analyze site usage, and facilitate certain functionalities. By using the Website, you consent to the use of cookies in accordance with our Privacy Policy.
-
-      ## 4. Use of the Website
-
-      You agree to use the Website only for lawful purposes and in a manner that does not infringe the rights of, restrict, or inhibit anyone else's use and enjoyment of the Website. Prohibited behavior includes harassing or causing distress or inconvenience to any person, transmitting obscene or offensive content, or disrupting the normal flow of dialogue within the Website.
-
-      ## 5. Governing Law
-
-      These Terms shall be governed by and construed in accordance with the laws of the United States, without giving effect to any principles of conflicts of law.
-
-      ## 6. Changes to the Terms
-
-      We reserve the right to modify these Terms at any time. We will notify users of any changes by email. Your continued use of the Website after such changes have been notified will constitute your consent to such changes.
-
-      ## 7. Contact Information
-
-      If you have any questions about these Terms, please contact us at contact@librechat.ai.
-
-      By using the Website, you acknowledge that you have read these Terms of Service and agree to be bound by them.
+#  termsOfService:
+#    externalUrl: 'https://librechat.ai/tos'
+#    openNewTab: false
+#    modalAcceptance: true
+#    modalTitle: "Terms of Service for LibreChat"
+#    modalContent: |
+#      # Terms and Conditions for LibreChat
+#
+#      *Effective Date: February 18, 2024*
+#
+#      Welcome to LibreChat, the informational website for the open-source AI chat platform, available at https://librechat.ai. These Terms of Service ("Terms") govern your use of our website and the services we offer. By accessing or using the Website, you agree to be bound by these Terms and our Privacy Policy, accessible at https://librechat.ai//privacy.
+#
+#      ## 1. Ownership
+#
+#      Upon purchasing a package from LibreChat, you are granted the right to download and use the code for accessing an admin panel for LibreChat. While you own the downloaded code, you are expressly prohibited from reselling, redistributing, or otherwise transferring the code to third parties without explicit permission from LibreChat.
+#
+#      ## 2. User Data
+#
+#      We collect personal data, such as your name, email address, and payment information, as described in our Privacy Policy. This information is collected to provide and improve our services, process transactions, and communicate with you.
+#
+#      ## 3. Non-Personal Data Collection
+#
+#      The Website uses cookies to enhance user experience, analyze site usage, and facilitate certain functionalities. By using the Website, you consent to the use of cookies in accordance with our Privacy Policy.
+#
+#      ## 4. Use of the Website
+#
+#      You agree to use the Website only for lawful purposes and in a manner that does not infringe the rights of, restrict, or inhibit anyone else's use and enjoyment of the Website. Prohibited behavior includes harassing or causing distress or inconvenience to any person, transmitting obscene or offensive content, or disrupting the normal flow of dialogue within the Website.
+#
+#      ## 5. Governing Law
+#
+#      These Terms shall be governed by and construed in accordance with the laws of the United States, without giving effect to any principles of conflicts of law.
+#
+#      ## 6. Changes to the Terms
+#
+#      We reserve the right to modify these Terms at any time. We will notify users of any changes by email. Your continued use of the Website after such changes have been notified will constitute your consent to such changes.
+#
+#      ## 7. Contact Information
+#
+#      If you have any questions about these Terms, please contact us at contact@librechat.ai.
+#
+#      By using the Website, you acknowledge that you have read these Terms of Service and agree to be bound by them.
 
   endpointsMenu: true
   modelSelect: true
@@ -110,32 +110,32 @@ actions:
     - "google.com"
 
 # Example MCP Servers Object Structure
-mcpServers:
-  everything:
-    # type: sse # type can optionally be omitted
-    url: http://localhost:3001/sse
-    timeout: 60000  # 1 minute timeout for this server, this is the default timeout for MCP servers.
-  puppeteer:
-    type: stdio
-    command: npx
-    args:
-      - -y
-      - "@modelcontextprotocol/server-puppeteer"
-    timeout: 300000  # 5 minutes timeout for this server
-  filesystem:
-    # type: stdio
-    command: npx
-    args:
-      - -y
-      - "@modelcontextprotocol/server-filesystem"
-      - /home/user/LibreChat/
-    iconPath: /home/user/LibreChat/client/public/assets/logo.svg
-  mcp-obsidian:
-    command: npx
-    args:
-      - -y
-      - "mcp-obsidian"
-      - /path/to/obsidian/vault
+#mcpServers:
+#  everything:
+#    # type: sse # type can optionally be omitted
+#    url: http://localhost:3001/sse
+#    timeout: 60000  # 1 minute timeout for this server, this is the default timeout for MCP servers.
+#  puppeteer:
+#    type: stdio
+#    command: npx
+#    args:
+#      - -y
+#      - "@modelcontextprotocol/server-puppeteer"
+#    timeout: 300000  # 5 minutes timeout for this server
+#  filesystem:
+#    # type: stdio
+#    command: npx
+#    args:
+#      - -y
+#      - "@modelcontextprotocol/server-filesystem"
+#      - /home/user/LibreChat/
+#    iconPath: /home/user/LibreChat/client/public/assets/logo.svg
+#  mcp-obsidian:
+#    command: npx
+#    args:
+#      - -y
+#      - "mcp-obsidian"
+#      - /path/to/obsidian/vault
 
 # Definition of custom endpoints
 endpoints:
@@ -162,9 +162,9 @@ endpoints:
   custom:
     - name: "OpenAI"
       apiKey: "${OPENAI_API_KEY}"
-      baseURL: "https://oneapi.cubeofcube.com/v1"
+      baseURL: "https://oneapi.3of3.cn/v1"
       models:
-        default: [ "gpt-4o", "gpt-4o-mini", ]
+        default: ["gpt-3.5-turbo","gpt-4","gpt-4o", "gpt-4o-mini","o1-mini","o1" ]
         fetch: false
       titleConvo: true
       titleMethod: "completion"
@@ -173,7 +173,7 @@ endpoints:
 
     - name: "Deepseek"
       apiKey: "${OPENAI_API_KEY}"
-      baseURL: "https://oneapi.cubeofcube.com/v1"
+      baseURL: "https://oneapi.3of3.cn/v1"
       models:
         default: ["deepseek-chat", "deepseek-reasoner",]
         fetch: false
@@ -184,13 +184,13 @@ endpoints:
 
     - name: "Anthropic"
       apiKey: "${OPENAI_API_KEY}"
-      baseURL: "https://oneapi.cubeofcube.com/v1"
+      baseURL: "https://oneapi.3of3.cn/v1"
       models:
-        default: [ "claude-3-haiku-20240307", "claude-3-sonnet-20240229", ]
+        default: [ "claude-3-haiku-20240307", "claude-3-sonnet-20240229", "claude-3-5-sonnet-20240620", "claude-3-7-sonnet-20250219"]
         fetch: false
       titleConvo: true
       titleMethod: "completion"
-      titleModel: "claude-3-haiku-20240307"
+      titleModel: "claude-3-7-sonnet-20250219"
       modelDisplayLabel: "Anthropic"
 #    # Groq Example
 #    - name: 'groq'
