--- a/librechat.yaml
+++ b/librechat.yaml
@@ -162,7 +162,7 @@ endpoints:
   custom:
     - name: "OpenAI"
       apiKey: "${OPENAI_API_KEY}"
-      baseURL: "https://oneapi.3of3.cn/v1"
+      baseURL: "${OPENAI_BASE_URL}"
       models:
         default: ["gpt-3.5-turbo","gpt-4","gpt-4o", "gpt-4o-mini","o1-mini","o1" ]
         fetch: false
@@ -173,7 +173,7 @@ endpoints:
 
     - name: "Deepseek"
       apiKey: "${OPENAI_API_KEY}"
-      baseURL: "https://oneapi.3of3.cn/v1"
+      baseURL: "${OPENAI_BASE_URL}"
       models:
         default: ["deepseek-chat", "deepseek-reasoner",]
         fetch: false
@@ -184,7 +184,7 @@ endpoints:
 
     - name: "Anthropic"
       apiKey: "${OPENAI_API_KEY}"
-      baseURL: "https://oneapi.3of3.cn/v1"
+      baseURL: "${OPENAI_BASE_URL}"
       models:
         default: [ "claude-3-haiku-20240307", "claude-3-sonnet-20240229", "claude-3-5-sonnet-20240620", "claude-3-7-sonnet-20250219"]
         fetch: false
