fix: 调整孵化中心 logo, 标题, footer

--- a/.env.dev
+++ b/.env.dev
@@ -118,6 +118,6 @@ ALLOW_SHARED_LINKS=true
 ALLOW_SHARED_LINKS_PUBLIC=true
 
 
-APP_TITLE=CubeChat
+APP_TITLE=孵化中心 AI 对话
 # CUSTOM_FOOTER="My custom footer"
 HELP_AND_FAQ_URL=
