feat: Add support for web search

--- a/.env.dev
+++ b/.env.dev
@@ -24,6 +24,11 @@ DEBUG_CONSOLE=false
 OPENAI_BASE_URL=
 OPENAI_API_KEY=
 
+# https://github.com/cubeofcube-dev/search-api
+WEB_SEARCH_ENDPOINT=
+WEB_SEARCH_API_KEY=
+
+
 DEBUG_OPENAI=false
 DEBUG_PLUGINS=false
 
