--- a/.github/workflows/locize-i18n-sync.yml
+++ b/.github/workflows/locize-i18n-sync.yml
@@ -1,10 +1,11 @@
 name: Sync Locize Translations & Create Translation PR
 
 on:
-  push:
-    branches: [main]
-  repository_dispatch:
-    types: [locize/versionPublished]
+  workflow_dispatch:
+  # push:
+  #   branches: [main]
+  # repository_dispatch:
+  #   types: [locize/versionPublished]
 
 jobs:
   sync-translations:
