--- a/.github/workflows/release-docker-image.yml
+++ b/.github/workflows/release-docker-image.yml
@@ -1,32 +1,35 @@
-name: Docker Dev Images Build
+name: Release Docker Image
 
 on:
   workflow_dispatch:
   push:
     branches:
       - main
-    paths:
-      - 'api/**'
-      - 'client/**'
-      - 'packages/**'
+    tags:
+      - 'v*'
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     strategy:
       matrix:
         include:
           - target: api-build
             file: Dockerfile.multi
-            image_name: librechat-dev-api
-          - target: node
-            file: Dockerfile
-            image_name: librechat-dev
+            image_name: chat-with-llm
 
     steps:
-      # Check out the repository
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Fetch tags and set the latest tag
+        run: |
+          git fetch --tags
+          LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1) || echo "latest")
+          LATEST_TAG=$(echo $LATEST_TAG | sed 's/^v//')
+          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
 
       # Set up QEMU
       - name: Set up QEMU
@@ -48,25 +51,25 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Prepare the environment
       - name: Prepare environment
         run: |
-          cp .env.example .env
+          cp .env.dev .env
 
       # Build and push Docker images for each target
       - name: Build and push Docker images
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ${{ matrix.file }}
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.image_name }}:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.image_name }}:${{ env.LATEST_TAG }}
             ghcr.io/${{ github.repository_owner }}/${{ matrix.image_name }}:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.image_name }}:${{ github.sha }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.image_name }}:latest
-          platforms: linux/amd64,linux/arm64
+            ${{ secrets.DOCKER_USERNAME }}/${{ matrix.image_name }}:${{ env.LATEST_TAG }}
+            ${{ secrets.DOCKER_USERNAME }}/${{ matrix.image_name }}:latest
+          platforms: linux/amd64
           target: ${{ matrix.target }}
